client/styles.scss
@use 'sass:meta';
@use '@ecodev/angular-natural-gallery';
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:FILL@1');
@import 'quill/dist/quill.bubble.css';

@include meta.load-css('styles/themes');
@include meta.load-css('app/shared/components/boot-loader/boot-loader.external');
@include meta.load-css('app/shared/components/thesaurus/thesaurus.external');
@include meta.load-css('styles/layout');
@include meta.load-css('app/list/list.external');
@include meta.load-css('app/view-grid/view-grid.external');
@include angular-natural-gallery.natural-gallery-base();

body {
    margin: 0;
}

html,
body {
    height: 100%;
    --natural-default-spacing: 10px;
}

.pac-container {
    margin-top: 15px;
    margin-left: -10px;
}

/**
 * Debug
 */
pre.debug {
    margin: 10px;
    border: 1px solid rgba(0, 0, 0, 0.5);
    background: rgba(0, 0, 0, 0.2);
    padding: 10px;
    font-size: 16px;
    line-height: 1.5em;
    font-family: Courrier, monospace;
}

[debug] {
    border: 2px solid red;
}

[debug][children] > * {
    border: 2px solid orange;
}

[debug][children][grandchildren] > * > * {
    border: 2px solid green;
}

#appContent {
    height: 100vh;

    router-outlet + * {
        flex: 1;
        height: 100vh;
        min-height: 0;
    }
}

.mat-mdc-form-field textarea.mat-autosize {
    overflow: hidden;
}

.mat-mdc-form-field.width-auto {
    width: auto !important;
}

.padding-fab {
    padding-bottom: 120px !important;
}

natural-search {
    margin: 0 20px;

    natural-input:last-of-type {
        margin-right: 5px !important;
    }
}

natural-search,
.searchField {
    font-size: 16px;
}

// Allow newline in tooltips
.mat-mdc-tooltip {
    white-space: pre-line;
}

.mat-mdc-table mat-cell {
    align-items: flex-start;
    padding: 0 3px;
}

natural-gallery {
    .zoomable:hover .image,
    .image.zoomable:hover {
        transform: none !important;
    }

    .natural-gallery-js .figure {
        --marge: 5px;

        &.selected .selectBtn {
            top: var(--marge);
            left: var(--marge);

            .marker {
                border-color: transparent;
            }
        }

        .selectBtn {
            display: flex;
            top: var(--marge);
            left: var(--marge);
            justify-content: center;
            align-items: center;
            transition: none;
            border-radius: 20px;
            background-color: rgba(0, 0, 0, 0.4);
            padding: 0;

            .marker {
                border-color: rgba(255, 255, 255, 0.8);
            }
        }
    }
}

// Target the "Satellite/Roadmap" button of Google map to put it under our toolbar
app-view-map google-map div.gm-style > div:last-child {
    top: 75px !important;
}

// On /card/6000, keep the "Fiches associées" aligned to the left so it is more
// readable when name is long and wrapping
app-card natural-relations natural-table-button .mat-mdc-button {
    text-align: left;
}

// It is possible that the server returns error message on multiple line (eg: when ACL with multiple assertions fail),
// so we try to preserve that formatting, while still wrapping if necessary
.mat-mdc-snack-bar-label {
    white-space: pre-wrap;
}

// Align right so big number are easier to spot
.mat-column-usageCount {
    width: 12em;
    text-align: right !important;
}

// Try to keep number roughly under the column header
td.mat-column-usageCount {
    padding-right: 3em !important;
}

// Style PhotoSwipe link to card button. Cannot be put in corresponding
// component because of how PhotoSwipe works.
.pswp__button--card-button {
    color: #fff;
}

.ng-scroll-content {
    width: 100%;
}

.ng-scrollbar-wrapper,
.ng-scroll-viewport-wrapper,
.ng-scroll-layer,
.ng-scroll-viewport {
    /* Replace inset property not supported by Safari 13. */
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

@keyframes loading_pulse {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 0.2;
    }
    100% {
        opacity: 1;
    }
}

